# stm32-linux-blinkenlights

./: .gitignore
blinkenlights-protocol/: Cargo.toml
blinkenlights-protocol/src/: lib.rs
firmware/: Cargo.toml
firmware/src/: logic.rs  main.rs  protocol.rs  usb.rs
led-cpu-gauge/: Cargo.toml
led-cpu-gauge/src/: main.rs  usb.rs
pcb/: #auto_saved_files#  _autosave-stm32-linux-blinkenlights.kicad_pcb  _autosave-stm32-linux-blinkenlights.kicad_sch  fp-info-cache  silkscreen.dxf  silkscreen_export.dxf  stm32-linux-blinkenlights.kicad_pcb  stm32-linux-blinkenlights.kicad_prl  stm32-linux-blinkenlights.kicad_pro  stm32-linux-blinkenlights.kicad_sch  ~_autosave-stm32-linux-blinkenlights.kicad_pcb.lck
test-client/: Cargo.toml
test-client/src/: main.rs  usb.rs
