[package]
name = "led-cpu-gauge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
blinkenlights-protocol = { version = "0.1.0", path = "../blinkenlights-protocol" }
dotenvy = "0.15.7"
env_logger = { version = "0.11.8", features = ["auto-color", "humantime"] }
log = "0.4.27"
rusb = "0.9.4"
